fix(combobox): Fix alignment of icon in object switcher (#3364)
* fix(combobox): Fix alignment of icon in object switcher

* Update snapshots

--- a/ui/components/combobox/base/_index.scss
+++ b/ui/components/combobox/base/_index.scss
@@ -391,10 +391,6 @@
     }
   }
 
-  .slds-input__icon {
-    margin-top: (($square-icon-small-content / 2) * -1);
-  }
-
   .slds-icon {
     width: $square-icon-small-content;
     height: $square-icon-small-content;
